# netlify_test

./: .gitignore  Cargo.toml  README.md  bootstrap.js  package.json  webpack.config.js
.github/workflows/: deploy.yml
src/: app.rs  connector.rs  lib.rs
src/components/: table.rs
static/: index.html
static/js/: open_layer.js  wasm_bridge.js
