[package]
name = "southern_crossing"
version = "0.1.0"
authors = ["Philipp Hoenisch philipp@hoenisch.at"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
futures = "0.3.5"
js-sys = "0.3.42"
log = "0.4"
strum = "0.17"
strum_macros = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
serde-value = "0.7"
url = "2"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
wee_alloc = { version = "0.4.4", optional = true }
yew = { git = "https://github.com/yewstack/yew", features = ["web_sys"] }
yewtil = { git = "https://github.com/yewstack/yew", features = ["fetch","pure"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
features = ['Document', 'Element', 'HtmlElement', 'HtmlCollection', 'KeyboardEvent', 'Node', 'Window', "console", "Url"]
version = "0.3.4"
